--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,40 +1,29 @@
 ---
-title: 单伟建用虚假无担保票据大肆攫金
+title: 耶！伦敦法官对UBS三案齐立，“沼泽地“与”沼泽地“的终极对决
 ---
-`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1981874/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1981887/)
 
-加拿大温哥华扬帆农场 薇文viven
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-7-edited.png)图片来源：asia times
+2月9日，郭文贵先生于GTV、Gettr大直播中突然长耶一声，公布了一个振奋人心的好消息，即起诉UBS（瑞银集团）的官司被伦敦法官正式立案。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/ezgif.com-gif-maker-2.jpg)图片来源路透社
 
 
-单伟建用虚假的担保票据，从 “PAG 太盟集团”攫取资金，倒手到自己名下的上市公司。
+走到这一步，付出了7年。这是对世界邪恶“沼泽地”的第一仗，也是闯过的最重要一关。
 
-单伟建 2021年4月在开曼群岛注册成立了一家名为“戈壁收购”的空壳公司，随即在纳斯达克上市。承销商三家：花旗银行 (Citibank)、高盛亚洲 (Goldman Sachs (Asia) L.L.C. ) 和瑞银投资 (UBS Investment Bank) 。
+英国法官公义又独立的判决，使得爆料革命进入一个新阶段，但对UBS（瑞银集团）来说是一个重大打击。只要法官立案，就说明起诉UBS（瑞银集团）是有事实依据的，承认有索赔的事实。到时候，UBS（瑞银集团）必须提供和郭先生之间的所有信息，以及必须提供替中共高官存钱的信息。
 
-上市后共募集资金约$2.87亿美元，其中包括三大承销商超额配售的 $542.5万美元，全部进入单伟建的私人信托账户，委托美国新成立的“大陆股票转让&信托公司” (Continental Stock Transfer & Trust Company)进行管理，没留一分钱给“戈壁收购”。“戈壁收购”如何维持经营?
+UBS（瑞银集团）曾为了躲掉这个案子辞退涉事高管，并禁止这些高管去伦敦，甚至关掉分行想金蝉脱壳。因为UBS（瑞银集团）是世界“沼泽地”力量核心利益的核心，其中黑金存款达**一百万亿**美元，是过去人类几百年财富的集合点，大名鼎鼎的罗斯柴尔德家族在UBS（瑞银集团）的财富只排到第三位（瑞士、列支敦士登和卢森堡，藏匿了人类99.999%的人类财富）。对手实力的强大超出想象，甚至当初没有律师敢协助起诉UBS（瑞银集团），UBS（瑞银集团）提前布局早已把全世界的知名律师签约收买。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture1111.jpg)Bloomberg（彭博社）报道，伦敦的法官表示可以监督此案，因为伦敦是有害事件发生的地方，而UBS（瑞银集团）的伦敦部门充分而明显地参与了构成索赔行动的几个要素。”
 
-1、“戈壁收购” 发行 “无担保票据” 给 PAG 太盟集团，立即套现 $100万美元，支付管理人员薪酬。这一票据无利息，若“戈壁收购”在两年内无法实现借壳上市的发行目的，则无需偿还欠款， “太盟集团”将全部免除其债务。
 
-2，”戈壁收购“向“太盟集团”出售10,851份 “私募认股权证” ，为公司带来了10.85万美元的进账，作为公司维护费用。
+如今伦敦法官驳回UBS（瑞银集团）对于管辖权的申诉，并且三案齐立。至此，爆料革命终于打开了邪恶“沼泽地”和中共勾兑的大门。随着新冠病毒和新冠毒疫苗的真相与这些藏匿在UBS（瑞银集团）的黑金被揭露，是邪恶“沼泽地”力量希望更多的普通民众隐蔽的死去，届时没人再去关心银行的理财产品和亏空的社保基金。
 
-“PAG 太盟集团” 将这些债务以“内保外贷”形式，通过国内金融机构，转嫁到中国老百姓身上。此外 “PAG 太盟集团” 还从投资国内各行业获得巨额利益。
+中国源远流长的历史长河累积的巨额财富成为UBS（瑞银集团）最大的黑金来源，而这些财富本就属于中国必须归还给中国人民。如果能把海外属于中国人民的50万亿美元财富找回，不但可以轻松偿还所有中国人民欠下的房屋贷款和信用卡欠款，还能享受免费的教育和免费的墓地。这些年，中国劳动人民被榨取的太惨。
 
-郭文贵先生揭露盗国贼们玩巨额的虚假票据游戏，这只是九牛一毛。每个中国百姓身上都插着抽血管，财富被多重抽吸，通过无数像“戈壁收购”这样的公司，流入这些盗国贼家的私人信托账户，背上的是子子孙孙还不完的沉重债务。
+案子的成功立案，直插世界黑暗势力的总部，而中共会成为最终的对决方。人类的“沼泽地“力量，就是背后负责印发钞票、控制供应链和股市的，世界游戏规则的制定者。
 
-不灭中共，天理难容！
-
-参考资料：
-
-[https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm](https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm)
-
-[https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1\_8k.htm](https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1_8k.htm)
-
-[INVESTMENT MANAGEMENT TRUST AGREEMENT](https://contracts.justia.com/companies/gobi-acquisition-corp-13143/contract/186384/)
-
-* * *
-
-编译撰稿：薇文viven 编辑发稿：硫酸羟氯喹64
+现在“沼泽地“力量分属两大阵营，一部分跟我们新中国联邦一起，一部分跟我们新中国联邦为敌。多言无益，战一把试试。
 
  
 
