--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,150 +1,85 @@
 ---
-title: 两年来，CDC无视数据，甚至撒谎,将自然免疫当成阴谋论
+title: 中国人噩梦的开始，国人奴性的根源 ——《驭民五术》
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981794/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1981802/)
 
-[https://gtv.org/video/id=6204153b585ecc15d73f7d61](https://gtv.org/video/id=6204153b585ecc15d73f7d61)
+作者：纽约香草山教育部 – 蒙古鸿雁
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+中国第一本禁书是两千多年前先秦的商鞅撰写的《商君书》。
 
-Rep. Thomas Massie
-托马斯·马西议员
+在这本书中，始终强调朝廷是与民众对立的关系，秉持的指导思想是民强国弱、民弱国才能强。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/驭民五术-2.jpg)
+“弱民”成为了强大国家机器的核心思想。
 
-One of the biggest scandals during this whole pandemic, is the cover up
-在整个大流行期间, 最大的丑闻之一就是掩盖
+接下来的秦统治者们提炼了《商君书》的“精髓”，形成了一直延续至今、并被共产党演绎得炉火纯青、残暴统治人民的《驭民五术》。
 
-That’s been committed by Fauci and the CDC, especially the CDC
-福奇和疾病预防控制中心已经承认，尤其是疾病预防控制中心
+这是中国人噩梦的开始，也是国人奴性的根源。
 
-about the effectiveness of immunity that’s conferred after a natural infection
-关于自然感染后赋予的免疫力的有效性
+何为《驭民五术》？
 
-after you recover from that
-在你从自然感染中恢复后
+就是愚民、弱民、疲民、辱民、贫民。
 
-they’ve completely ignored that
-他们完全忽略了这一点
+愚民就是控制、统一思想和价值观，让你脑子想什么统治者说了算，不能让老百姓有独立思考的能力，不能产生自己的想法。
 
-They want everybody to get vaccinated
-他们希望每个人都接种疫苗
+弱民就是“以弱驱强、以奸驭良”。
 
-even those who don’t need vaccinated
-即使是那些不需要接种疫苗的人
+利用弱者对有钱有能力的人施加各种制约，全方位进行打击削弱，让有能力的人没办法与统治者对抗，最终达成用弱者干掉强者，最后只剩下弱者，达到更加便于统治者统治管理百姓的目的。
 
-and the science if you follow the science on this
-关于科学，如果你遵循这方面的科学
+疲民就是让你为了生计而疲于奔命，没时间产生想法，满脑子只剩下养家糊口的念头，让你没精力对抗强权。
 
-The Moderna trial showed there was no benefit of the vaccine to those who recov-ered from infection
-莫德纳试验表明，疫苗对那些从感染中恢复过来的人没有好处
+贫民就是横征暴敛、加强赋税让你积累不了财富没什么钱，但是会让你有口饭吃别饿死，这样就会让百姓心理上没有了安全感。
 
-The Pfizer trial showed there was no benefit to those who had recovered from in-fection from the vaccine
-辉瑞的试验表明，疫苗对那些从病毒感染中恢复过来的人没有任何好处
+当权者再玩弄一些小花招，给一些小恩惠，让一直贫苦的百姓一时间不知如何是好并感激涕零。
 
-A recent study with 52,000 people at the Cleveland Clinic
-最近在克利夫兰诊所对52,000人进行的一项研究表明
+“无恒产则无恒心”，也就没有了心力去对抗不公，也就安分老实了，为了不饿死也就听命并依赖于强权了。
 
-300 plus of whom did not receive the vaccine
-其中1300多人没有接种疫苗
+心理学上有一个专有名词叫“斯德哥尔摩综合症”， 是指犯罪过程中的被害人对于加害人产生情感认同、依赖等，并结成融洽、友好关系，甚至反过来帮助加害人的一种情感联结。
 
-but had prior infection showed that none of them got reinfected, symptomatically
-但之前曾经感染过，结果表明他们没有人再次感染，或有症状
+“斯德哥尔摩综合症”就很好地解释了这一点。
 
-and then if you want to compare the efficacy of immunity from recovering from COVID to that of the vaccine
-然后如果你想比较从 COVID 中恢复的免疫力与疫苗的功效
+辱民就是让老百姓没有尊严。统治者认为尊严不属于百姓，并鼓励相互检举揭发。百姓相互之间怀疑没有了信任感，也就无法凝聚抱团，对执政者也就无法构成威胁。
 
-the biggest study out there is the whole country of Israel
-最大的研究的国家是整个以色列
+让百姓不知道什么是尊严，剩下的强权的威严了。被剥夺了一切的没有尊严的百姓就会变的低眉顺眼、唯唯诺诺、战战兢兢、俯首帖耳，就更容易被强权践踏。
 
-Tel Aviv University, 6 million participants in this study, 6 million data points
-以色列特拉维夫大学的600万参与者参与了这项研究，600 万个数据点
+但“存在”就会有平衡，倾斜的久了就会有“力”来介入让失衡回归平衡。
 
-And it showed there’s virtually no difference actually is it showed a little bit
-它表明实际上几乎没有差异，它显示了一点
+阴邪的商鞅虽然给帝王们贡献了残暴的驭民术，但并未为自己和残暴的统治者提供退路，商鞅最终被秦惠文王杀掉并被“车裂”，秦王朝也未能长命。
 
-but probably not statistically significant, a little bit better
-但可能没有统计学意义，对自然感染的免疫力要好一点
+“残暴治理”理念的“开创者”或“升级者”最后都会被自己的“创意”灭掉，这在世界历史上已上演了无数次。
 
-immunity from natural infection and before you all report this
-在你们所有人报告之前
+“驭民五术”在中国存活了两千多年后，非法夺取政权的CCP不但全盘接受，并将《驭民五术》驾驭使用的登峰造极，让这个曾经勤劳、善良、智慧、勇敢的民族变得懦弱、自私、愚昧无知，成为世界的弃儿并正在走向地狱的路上。
 
-I’m not saying go out and get the virus instead of getting the vaccine
-我不是说出去感染病毒而不去接种疫苗
+但共产党残暴统治中国人民的同时也在迎它接走向覆灭末日的到来。
 
-The vaccine can save lives and certain
-疫苗可以挽救生命和肯定的
+2020年六月四日一个象征着中华民族新生的新中国联邦诞生了。
 
-but there’s no need, the science shows this
-但没必要，科学证明了这一点
+在郭文贵先生引领的新中国联邦爆料革命下，中国人民正在从沉睡中被唤醒～
 
-There’s no need to get the vaccine if you’ve already recovered from COVID
-如果您已经从COVID中康复，则无需接种疫苗
+一颗颗苏醒的希望星火闪烁在世界各地，并迅速连结形成燎原之势，烧向正在摧毁中华民族和世界的邪魔共产党。
 
-And then there’s no need to expose yourself to that danger
-然后就没有必要让自己暴露在那种危险之中
+貌似强悍而内在已腐败溃烂、千疮百孔的共产党的庞大躯体，正在熊熊燃烧的烈火中扭曲挣扎。
 
-The CDC knows this, they admitted to me on a recorded phone call
-疾病预防控制中心知道这一点，他们通过录了音的电话向我承认了这一点
+而奴役了中国人民两千多年的“驭民术”也正随着共产党那发出哀嚎、腐臭的躯壳一同走向炼狱。
 
-I’ll be glad to give you that they knew they were misreporting the results of the Pfizer data
-我很高兴告诉你他们知道他们误报了辉瑞数据的结果
+它们将被铲除殆尽、从这个星球上灰飞烟灭！
 
-Reporter
-记者
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
 
-Number one you didn’t answer whether or not you’ve been vaccinated
-第一个你没有回答你是否接种过疫苗
+**校对/发稿：**Fei797
 
-Rep. Thomas Massie
-托马斯·马西议员
+**更多资讯，更多关注**
 
-Well first of all, it’s none of your business
-好吧，首先，这不关你的事
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-But I’m going to tell you, I’m not vaccinated
-但我要告诉你，我没有接种疫苗
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-And until there’s some science
-直到有一些科学依据
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-by the way I have a Master’s of Science degree from MIT
-顺便说一句，我拥有麻省理工学院的理学硕士学位
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
 
-I’m not a virologist, but I can read data
-我不是病毒学家，但我可以读取数据
 
-Everybody just needs to read it
-每个人只需要阅读它
 
-Don’t put your head in the sand. Look at the data.
-不要把头埋在沙子里，看看数据
-
-I’m not going to get the vaccine until there’s data that shows
-我不会接种疫苗，直到有数据表明
-
-that it will improve upon the immunity
-它会提高免疫力
-
-that’s been conferred to me as a result of a natural infection that I had
-由于我的一次自然感染，而我被授予了这一权利
-
-**原视频链接**[:](https://twitter.com/repthomasmassie/status)[https://twitter.com/repthomasmassie/status](https://twitter.com/repthomasmassie/status)
-
-Date:02/06/2022
-原视频标题: For 2 years, CDC ignored the data and even lied about it to treat natural immunity like a conspiracy theory
-两年来，CDC无视数据，甚至撒谎，将自然免疫当成阴谋论
-原视频日期：2022/02/08
-原视频链接https://twitter.com/repthomasmassie/status/1490783499883847680?s=24
-任务编号：KE392(3699)
-视频时间段 : 0:00-2:34
-
-英听校：洛杉矶盘古农场 – Layka
-翻译：洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场- 银龙
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
