--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,89 +1,150 @@
 ---
-title: 全球疫情更新（第三针的未来）
+title: 两年来，CDC无视数据，甚至撒谎,将自然免疫当成阴谋论
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981725/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981794/)
 
-**整理/编辑：枳实**
+[https://gtv.org/video/id=6204153b585ecc15d73f7d61](https://gtv.org/video/id=6204153b585ecc15d73f7d61)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-862.png)图片：雅典娜农场设计组 精灵蓝
+Rep. Thomas Massie
+托马斯·马西议员
 
+One of the biggest scandals during this whole pandemic, is the cover up
+在整个大流行期间, 最大的丑闻之一就是掩盖
 
-雅典娜疫情更新（2022年 2月9日）
+That’s been committed by Fauci and the CDC, especially the CDC
+福奇和疾病预防控制中心已经承认，尤其是疾病预防控制中心
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+about the effectiveness of immunity that’s conferred after a natural infection
+关于自然感染后赋予的免疫力的有效性
 
-**一，全球疫情基本数据**
+after you recover from that
+在你从自然感染中恢复后
 
-感染总数：397,363,280（日新增2,677,691人，14天增幅-23%）
+they’ve completely ignored that
+他们完全忽略了这一点
 
-死亡总数：5,749,846（日新增10,900      人，14天增幅 +29%）
+They want everybody to get vaccinated
+他们希望每个人都接种疫苗
 
-**二，全球“疫苗”毒针统计数据**
+even those who don’t need vaccinated
+即使是那些不需要接种疫苗的人
 
-“疫苗”毒针注射总数：103亿
+and the science if you follow the science on this
+关于科学，如果你遵循这方面的科学
 
-完全“接种”：42.2亿人
+The Moderna trial showed there was no benefit of the vaccine to those who recov-ered from infection
+莫德纳试验表明，疫苗对那些从感染中恢复过来的人没有好处
 
-完全“接种”百分比：54.1%
+The Pfizer trial showed there was no benefit to those who had recovered from in-fection from the vaccine
+辉瑞的试验表明，疫苗对那些从病毒感染中恢复过来的人没有任何好处
 
-**三，澳洲疫情和“疫苗”数据**
+A recent study with 52,000 people at the Cleveland Clinic
+最近在克利夫兰诊所对52,000人进行的一项研究表明
 
-感染总数：2,811,482（今日新增31,064人）
+300 plus of whom did not receive the vaccine
+其中1300多人没有接种疫苗
 
-死亡总数：4,373人（今日新增 70人）
+but had prior infection showed that none of them got reinfected, symptomatically
+但之前曾经感染过，结果表明他们没有人再次感染，或有症状
 
-每万人感染人数：1090.1839人
+and then if you want to compare the efficacy of immunity from recovering from COVID to that of the vaccine
+然后如果你想比较从 COVID 中恢复的免疫力与疫苗的功效
 
-“疫苗”毒针注射总数：51,590,445 （今日新增217,265   针）
+the biggest study out there is the whole country of Israel
+最大的研究的国家是整个以色列
 
-完全“接种”：19,332,593人
+Tel Aviv University, 6 million participants in this study, 6 million data points
+以色列特拉维夫大学的600万参与者参与了这项研究，600 万个数据点
 
-第二针“接种”百分比：78.9%
+And it showed there’s virtually no difference actually is it showed a little bit
+它表明实际上几乎没有差异，它显示了一点
 
-16岁以上人口接种至少一剂疫苗的比例：&gt;95%
+but probably not statistically significant, a little bit better
+但可能没有统计学意义，对自然感染的免疫力要好一点
 
-16岁以上人口接种至少两剂疫苗的比例：93.8%
+immunity from natural infection and before you all report this
+在你们所有人报告之前
 
-加强针总数：9,182,529（日新增：184,868针）
+I’m not saying go out and get the virus instead of getting the vaccine
+我不是说出去感染病毒而不去接种疫苗
 
-**四，第三针的未来**
+The vaccine can save lives and certain
+疫苗可以挽救生命和肯定的
 
-现在澳洲民众处在轰轰烈烈打第三针的阶段，第三针增长速度领先于很多国家。如下图各国每百人加强针注射数量曲线，绿色曲线为澳大利亚，其陡峭程度最大。加强针的效果如何，加强针接种水平远远大于澳洲的英国数据可以用来借鉴和预测。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/6-9.png)
-[下面这封信是英国民众通过信息自由法案获得](https://stevekirsch.substack.com/p/negative-vaccine-efficacy-example)的英国布莱普教学医院（Blackpool teaching Hospital）的住院患者中的疫苗接种统计数据。从信中的数据推算可知，住院病人中多达130/182 = 71%的患者是注射了加强针的病人。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/11-4.png)
-但英国布莱普地区的第三针接种率仅有44.9%，如下图所示。这71%和44.9%之间的巨大差距
-![](https://assets.gnews.org/wp-content/uploads/2022/02/12-7.png)
-英国布莱普地区的第三针接种率仅有44.9%，如下图所示。这71%和44.9%之间的巨大差距正说明了加强针注射不仅不能减轻病情，反而使得住院率几乎翻倍。 让我们看一下英国政府的数据：
-![](https://assets.gnews.org/wp-content/uploads/2022/02/14-1.png)
-如上图所示，今年1月份的数据，每十万人感染率各年龄组的对比，可以看到，18岁以上的各年龄组的感染率都是打2针及更多疫苗毒针的人有更高的感染率。
+but there’s no need, the science shows this
+但没必要，科学证明了这一点
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+There’s no need to get the vaccine if you’ve already recovered from COVID
+如果您已经从COVID中康复，则无需接种疫苗
 
-数据来源：
+And then there’s no need to expose yourself to that danger
+然后就没有必要让自己暴露在那种危险之中
 
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
+The CDC knows this, they admitted to me on a recorded phone call
+疾病预防控制中心知道这一点，他们通过录了音的电话向我承认了这一点
 
-[Our world in data](https://ourworldindata.org/coronavirus-data)
+I’ll be glad to give you that they knew they were misreporting the results of the Pfizer data
+我很高兴告诉你他们知道他们误报了辉瑞数据的结果
 
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
+Reporter
+记者
 
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
+Number one you didn’t answer whether or not you’ve been vaccinated
+第一个你没有回答你是否接种过疫苗
 
-[covidlive.com.au](https://covidlive.com.au/)
+Rep. Thomas Massie
+托马斯·马西议员
 
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
+Well first of all, it’s none of your business
+好吧，首先，这不关你的事
 
-[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
+But I’m going to tell you, I’m not vaccinated
+但我要告诉你，我没有接种疫苗
 
-发布：tianzhihuan
+And until there’s some science
+直到有一些科学依据
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+by the way I have a Master’s of Science degree from MIT
+顺便说一句，我拥有麻省理工学院的理学硕士学位
+
+I’m not a virologist, but I can read data
+我不是病毒学家，但我可以读取数据
+
+Everybody just needs to read it
+每个人只需要阅读它
+
+Don’t put your head in the sand. Look at the data.
+不要把头埋在沙子里，看看数据
+
+I’m not going to get the vaccine until there’s data that shows
+我不会接种疫苗，直到有数据表明
+
+that it will improve upon the immunity
+它会提高免疫力
+
+that’s been conferred to me as a result of a natural infection that I had
+由于我的一次自然感染，而我被授予了这一权利
+
+**原视频链接**[:](https://twitter.com/repthomasmassie/status)[https://twitter.com/repthomasmassie/status](https://twitter.com/repthomasmassie/status)
+
+Date:02/06/2022
+原视频标题: For 2 years, CDC ignored the data and even lied about it to treat natural immunity like a conspiracy theory
+两年来，CDC无视数据，甚至撒谎，将自然免疫当成阴谋论
+原视频日期：2022/02/08
+原视频链接https://twitter.com/repthomasmassie/status/1490783499883847680?s=24
+任务编号：KE392(3699)
+视频时间段 : 0:00-2:34
+
+英听校：洛杉矶盘古农场 – Layka
+翻译：洛杉矶盘古农场 – Layka
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场- 银龙
+发布：洛杉矶盘古农场 – 彩虹 Rainbow
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
