--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,9 +1,9 @@
 ---
-title: 东京成田机场2021年国际旅客数量创新低
+title: 韩国96%疫苗接种率 新增中共病毒却创新高
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981970/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981989/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220210-scaled.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220210-1-scaled.jpg)
 *编辑：东京樱花团/简报小组
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
