--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,14 +1,11 @@
 ---
-title: 古今司马懿刘亚洲西颦东效（下）
+title: 东京成田机场2021年国际旅客数量创新低
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981955/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981970/)
 
-文编：东京樱花团/樱花传媒
-视频:东京樱花团/中文小视频组
-
-1月5日，郭文贵先生在GTV大直播透露，刘亚洲想学司马懿，但是不得要领。司马懿永远不会暴露出自己的目的，永远掩盖自己的真实想法。而刘亚洲一直躺在自己是李先念女婿的功劳本上，为达目的，谎话连篇，才华和思想限制了其未来走向，一生不得志。
-
-*编辑、发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220210-scaled.jpg)
+*编辑：东京樱花团/简报小组
+发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
