--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,12 +1,12 @@
 ---
-title: 《我是音雄》赐予新中国联邦人自信和力量（三）
+title: 古今司马懿刘亚洲西颦东效（下）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981932/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981955/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-1月5日，郭文贵先生在GTV大直播透露，美国和欧洲的很多人，是通过听了文贵先生唱的歌，才对文贵先生有了初步了解。《我是音雄》每时每刻都影响着中国人在海外的安全，音乐是跨越种族和国界的语言，它给我们带来无限的美好。
+1月5日，郭文贵先生在GTV大直播透露，刘亚洲想学司马懿，但是不得要领。司马懿永远不会暴露出自己的目的，永远掩盖自己的真实想法。而刘亚洲一直躺在自己是李先念女婿的功劳本上，为达目的，谎话连篇，才华和思想限制了其未来走向，一生不得志。
 
 *编辑、发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
