--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,12 +1,12 @@
 ---
-title: 《我是音雄》赐予新中国联邦人自信和力量（二）
+title: 古今司马懿刘亚洲西颦东效（上）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981919/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1981941/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-1月5日，郭文贵先生在GTV大直播透露，第五，《我是音雄》唱的是反抗的声音，是消灭邪恶的力量，这是最核心的一点；第六，不要忘记《我是音雄》走过的伟大旅程，包括要记住G-TV大直播。参加《我是音雄》的歌手都受到过心理上的束缚和挑战，他们不是为了争名夺利，所以说《我是音雄》是解放人性之后得到灭共力量的证实。
+1月5日，郭文贵先生在GTV大直播透露，刘亚洲认为司马懿的故事不真实，有虚构成份。司马昭、司马炎和曹植这几个人物是值得分析的。刘亚洲是中共国最推崇司马懿的三个人之一，他对体制很不满。他有野心，想当国家安全委员会主席。
 
 *编辑、发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
