--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,29 +1,26 @@
 ---
-title: 拜登政府二度批准对台军售
+title: 美41位参议员敦促贸易代表建立全面对华关税程序
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981861/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981883/)
 
 **撰稿：日本东京方舟农场  幽蘭自得**
 
-2月7日，美国国务院宣布，基于《台湾关系法》，已批准对台湾出售价值1亿美元丶为期5年的爱国者系统工程勤务计划相关的军事设备与服务。这是拜登政府上台后，第二次核准对台湾的军售。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-148.jpg)（图片来自路透社）
-据《德国之声》报道，美国国务院政军局在一份声明稿中表示，这次军售将会有助于台湾维持其飞弹密度丶确保台湾的空中作战战备能力，以达到区域吓阻作用。
+据《美国之音》2月9日报道，美国四十一位跨党派的联邦参议员致函美国贸易代表戴琪(Katherine Tai)，敦促她建立一个更全面的程序，将一些中共国进口产品排除在惩罚性的关税之外。这些参议员表示，这不仅会缓解这些关税给美国商家带来的负面影响，而且会使它们有更多的时间和资源把供应链转移出中国并使制造业回流美国。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-149.jpg)图为2019年6月美中贸易战期间，洛杉矶港堆放的集装箱（图片来自Frederick J. Brown/AFP via Getty Images）
+据报道，以俄亥俄州共和党籍参议员罗布·波特曼(Rob Portman)和特拉华州民主党籍参议员汤姆·卡珀(Tom Carper)领衔的41位参议员2月7日在信中表示，他们强烈支持为美国制造商、生产商和进口商有关减免对中共国产品征收的关税的申请建立一个全面的程序。
 
-据悉，这次军售主要是提供支持台湾参与爱国者飞弹工程勤务及飞弹效能鉴测的相关设备与服务，为期共5年，提供的协助包含工程服务支援，以及维持与改善爱国者防空飞弹系统。
+这些参议员认为，在新冠疫情还在持续的情况下，这个关税排除程序的“狭隘性质”，“可能会阻止陷入困境的企业和制造商获得他们迫切需要的救济”。他们说，根据最初的排除程序，只有1%的进口产品有资格得到考虑。
 
-美国国务院政军局也重申，核准这次军售是为了使台湾的军队持续现代化且保持可靠的防御能力，因为这样的发展符合美国的国家丶经济与安全利益。
+“我们认为，为受关税影响的企业提供一个申请有限但可延续的关税减免机会的全面性的排除程序，是我们反击中（共）国不公平贸易做法战略中一个有价值的组成部分，”他们在信中写道。“除了减轻关税对美国企业的负面影响外，它还将让这些企业有更多的时间和资源，将供应链移出中（共）国，并将制造业重新带回美国。”
 
-美国国务院还表示，这批军售案能有助于提高台湾的安全，并对维持区域政局稳定丶军事平衡和经济进步都有帮助。
+他们认为，重启一个全面性的关税排除程序既可以使美国继续对中共施压，同时也可以减轻关税给美国商家和工人带来的经济痛苦。
 
-随后，台湾国防部于2月8日发布新闻稿表示，美国政府已针对军售案进行“知会国会”的程序，表示该案有望在1个月后正式生效。
+不过，拜登总统1月20日在一次记者会上曾表示，他知道有些商业团体正强烈要求他开始降低川普政府对中共国商品征收的关税，而且美国贸易代表戴琪正在就这个议题进行努力，但他同时表示，解除对中共国商品的关税的时机还未成熟。
 
-此外，台湾国防部还说美国此举是基于《台湾关系法》与“六项保证”，持续帮助台湾维持足够的自我防卫能力，所以台湾国防部也向美国政府表示感谢。
+川普政府2018年根据1974年《贸易法》第301条的规定开始对价值3千多亿美元的中共国产品加征惩罚性的关税。尽管美中双方在2020年1月签署了第一阶段贸易协议，并批准了对一些产品进行关税豁免，但是相当一部分的关税并未取消。拜登政府上台后，美国贸易代表办公室对美中贸易关系进行了全面的审议，并在去年10月4日宣布对中共国产品恢复“有针对性的、潜在的”关税排除程序。
 
-台湾外交部也在同日发布声明，强调这次军售是拜登政府自2021年上任以来，第二度的对台军售，也是2022年的首次对台军售，此举充分展现了华府对台湾国防的高度重视，也持续近年来美国对台军售常态化的政策，让台湾能即时获取防卫所需装备，有效提升吓阻能力。
-
-据报道，在去年8月的首次对台军售案中，拜登政府核准贩售台湾40门M109A6自走炮丶20辆M992A2系列野战炮兵弹药补给车与一套先进野战炮兵战术数据系统（AFATDS），当时的军售总额是7亿5000万美元。
-
-参考链接：[https://www.dw.com/zh/%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E4%BA%8C%E5%BA%A6%E6%89%B9%E5%87%86%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE-%E5%8C%97%E4%BA%AC%E5%BC%BA%E7%A1%AC%E5%9B%9E%E5%BA%94/a-60692312](https://www.dw.com/zh/%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E4%BA%8C%E5%BA%A6%E6%89%B9%E5%87%86%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE-%E5%8C%97%E4%BA%AC%E5%BC%BA%E7%A1%AC%E5%9B%9E%E5%BA%94/a-60692312)
+参考链接：
+[https://www.voachinese.com/a/us-china-trade-tariffs-20220208/6433060.html](https://www.voachinese.com/a/us-china-trade-tariffs-20220208/6433060.html)
 
 素材采编：幽蘭自得
 编辑：老孙
