--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,30 +1,33 @@
 ---
-title: 2022.2.9大直播后记：智慧灭共
+title: 拜登政府二度批准对台军售
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981843/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981861/)
 
-**整理：清水冷香、Lucy Liu
-编辑：Candy**
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-419.png)
+2月7日，美国国务院宣布，基于《台湾关系法》，已批准对台湾出售价值1亿美元丶为期5年的爱国者系统工程勤务计划相关的军事设备与服务。这是拜登政府上台后，第二次核准对台湾的军售。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-148.jpg)（图片来自路透社）
+据《德国之声》报道，美国国务院政军局在一份声明稿中表示，这次军售将会有助于台湾维持其飞弹密度丶确保台湾的空中作战战备能力，以达到区域吓阻作用。
 
+据悉，这次军售主要是提供支持台湾参与爱国者飞弹工程勤务及飞弹效能鉴测的相关设备与服务，为期共5年，提供的协助包含工程服务支援，以及维持与改善爱国者防空飞弹系统。
 
-中、美、俄在冬奥会以后，实际上是三角力量的实质性的改变。（对）爆料革命会有什么受益，什么影响？
+美国国务院政军局也重申，核准这次军售是为了使台湾的军队持续现代化且保持可靠的防御能力，因为这样的发展符合美国的国家丶经济与安全利益。
 
-灭共几乎是人类万年来最难的一件事儿，大家千万别想当然，或者必然，或者容易，那是犯了极端错误，那就犯了同共产党同样的错误。灭共，我们不是对任何人的责任，也不是我们的保证，也不是我们必须做的事。但是我们必须灭掉共产党。
- 
-怎么灭掉共产党？智慧地灭掉共产党。我们要灭全人类最大的一个坏蛋——共产党，人家都觉得是不可能的。咱没有军队，没有任何组织，还不流血，你去想一想。你可以纵观人类历史，地球这百万亿年来，地球和银河系里没人说过，说不流血要改变一个这么大的流氓组织、黑社会组织。想都没想过，不要说做，想都没想过。
+美国国务院还表示，这批军售案能有助于提高台湾的安全，并对维持区域政局稳定丶军事平衡和经济进步都有帮助。
 
-释迦牟尼没这么说过，阿拉也没这么说过，耶稣也没这么说过，天主也没这么说过，没有人这么说过。我们中国的老天爷，玉皇大帝都没这么说过。 我们现在所干的事情，几乎是人类上，地球上，物理上不可能的事。但是真的拜万佛万神所赐，我们真的是在接近完成，而且一定会完成。消灭这个共产党！
+随后，台湾国防部于2月8日发布新闻稿表示，美国政府已针对军售案进行“知会国会”的程序，表示该案有望在1个月后正式生效。
 
-***发布：Candy***
+此外，台湾国防部还说美国此举是基于《台湾关系法》与“六项保证”，持续帮助台湾维持足够的自我防卫能力，所以台湾国防部也向美国政府表示感谢。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场](https://twitter.com/HimalayaAthena1)[Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场](https://www.gettr.com/user/himalayaathena)[Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)[Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[GTV](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[直播](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[1](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+台湾外交部也在同日发布声明，强调这次军售是拜登政府自2021年上任以来，第二度的对台军售，也是2022年的首次对台军售，此举充分展现了华府对台湾国防的高度重视，也持续近年来美国对台军售常态化的政策，让台湾能即时获取防卫所需装备，有效提升吓阻能力。
+
+据报道，在去年8月的首次对台军售案中，拜登政府核准贩售台湾40门M109A6自走炮丶20辆M992A2系列野战炮兵弹药补给车与一套先进野战炮兵战术数据系统（AFATDS），当时的军售总额是7亿5000万美元。
+
+参考链接：[https://www.dw.com/zh/%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E4%BA%8C%E5%BA%A6%E6%89%B9%E5%87%86%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE-%E5%8C%97%E4%BA%AC%E5%BC%BA%E7%A1%AC%E5%9B%9E%E5%BA%94/a-60692312](https://www.dw.com/zh/%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E4%BA%8C%E5%BA%A6%E6%89%B9%E5%87%86%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE-%E5%8C%97%E4%BA%AC%E5%BC%BA%E7%A1%AC%E5%9B%9E%E5%BA%94/a-60692312)
+
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
