--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,21 +1,17 @@
 ---
-title: 针下亡魂｜希腊 21 岁足球运动员接种疫苗后死亡
+title: 【粤语配音】2022年2月9日：至关重要的三件大事
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/1982043/)
+`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1982055/)
 
-**撰文/ 疫情关注组｜发布日期/ 10/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2021/10/New-Looks-In-Autumn-Style123445_2.jpg)
-**更多资讯请关注官方盖特（Please follow our Gettr：[https://gettr.com/post/pl6k0218bf](https://gettr.com/post/pl6k0218bf)）**
+紐約香草山-香港部
 
-隶属于伊利乌波利具乐部的希腊 21 岁足球运动员 Alexandros Lampis ，在本月初（2日）对阵 Ermionida 的比赛中，即开场14分钟时，因心脏骤停而倒在赛场上。
+所以今天有三件大事，第一，我们第一次打开了沼泽地，真正的在法庭上公开较量，找回中国人在西方，被共产党藏匿的财富，第一道大门打开了。
 
-最令人遗憾的是，由于当时体育场内并没有除颤器可用，Alexandros 足足等了 20 分钟，才等到救护车赶到。之后不久，伊利乌波利具乐部在官网宣布了Alexandros 的死讯。
+这是一个，第二个七哥宣布，七哥将离开美国到伦敦和日本生活，直接面对共产党，从现在的美国以美灭共、以共灭共，长距离灭共，直接接触，这是第二个宣布。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpeg)
+第三个七哥将在法律上申请，变得一无所有，做好一切最坏的事情发生，万一共产党弄个导弹导到日本去呢，万一给我下毒，毒死我呢是吧？，所以我都会准备好，然后我会让这些76个案子的缠诉，我让他们彻彻底底到另外一个阶段去。
 
-根据希腊当局的防疫规定，获得上场比赛资格的运动员必须接种 COVID-19 疫苗。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpg)
-来源｜[TheSun](https://www.thesun.co.uk/sport/17524888/alexandros-lampis-dies-21-greek-footballer-cardiac-arrest/)
+所以说兄弟姐妹们，这是第三个大事，因为今天法律程序没完，我在等着，等着今天PAG关于那天的开庭，初二的开庭结果出来，然后我的法律程序再进行完，就开始对PAG真正的全面作战全面开始，让这些片PAG所有案子的揭开，对美国司法的腐败，对美国黑暗控制、黑金的一个全面的，对西方的蓝金黄的一个大战，揭露的开始。
 
  
 
