--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,159 +1,33 @@
 ---
-title: 疫苗不仅会伤害癌症免疫力，还会形成相对低效的免疫力
+title: “军人在战场上可以是英雄，你们也是英雄”
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981600/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1981653/)
 
-[https://gtv.org/video/id=62041491585ecc15d73f7d41](https://gtv.org/video/id=62041491585ecc15d73f7d41)
+#### 编译： Cran
 
-Dr. Harvey Risch (Professor of Epidemiology at Yale University)
-哈维·里施博士（耶鲁大学流行病学教授）
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16444481951.png)
+Image source: CTV.ca
 
-People who’ve had COVID and then get vaccinated
-感染过新冠病毒然后接种疫苗的人
+大使(Ambassador) 桥是一座连结底特律,密歇根州（Detroit, Michigan）和温莎, 安大略省（Windsor，Ontario）横跨美加的最大桥梁，是北美的一条主要的经济动脉。短暂的关闭就马上暴露出其供应链的脆弱性。那曾是卡车司机们熟悉的赖以生存的桥梁，但为了生存和加拿大的未来，他们不得不暂时的关闭它。
 
-have lower levels of anti nucleocapsid antibodies
-具有较低水平的抗核衣壳抗体
+同时浮出水面的是这座桥的拥有者，马特 ·莫伦（Matt Moroun）家族。它与加拿大政府持续了长达数年的斗争。莫伦家族在一份声明中说，贸易需要恢复，他的家庭对“卡车司机和那些在封锁中被抓的人表示同情”。他呼吁官员们“迅速采取行动，以体现相互尊重的方式尽快缓解局势。
 
-And this means that since the vaccines don’t address the nucleocapsid antigens
-这意味着由于疫苗不针对核衣壳抗原
+周二早，那里的交通几乎停止，直到下午晚些时候才开始缓慢恢复。安大略省警方表示，前往美国的交通“受限”。虽然加拿大边境管理局的网站显示大桥仍处于关闭状态，但仍有少量卡车朝着加拿大方向行驶。
 
-they only address the spike
-他们只解决刺突蛋白问题
+这座以装饰艺术为灵感的桥建于1929年。在当时美加约有四分之一的货物在桥上往来，它与底特律汽车工业的联系延续了几十年。其承载的贸易量几乎相当于美国与英国的总和。
 
-It means that they’re doing something that’s damaging the immune response
-这意味着他们正在做一些破坏免疫反应的事情
+大桥建成时是世界上最长的悬索桥，被称为两国关系的贡品。这座桥的建造者还建造了金门大桥。 然而这座大使桥在金融危机开始数周后开幕，引发了一场漫长的跨境金融灾难。
 
-in a more general way than just what they do with a spike
-以更一般的方式，而不是他们对刺突蛋白所做的事情
+莫伦家族通过底特律国际桥梁公司于1979年收购了这座桥梁的控股权。莫伦于2020年去世。根据美国人口普查局数据的分析，去年前11个月，这座桥的贸易额为1307亿美元，由此产生了大量通行费。
 
-And this is empirical data that public health UK has published
-这是英国公共卫生部门公布的经验数据
+大桥的关闭无疑是迄今为止最具经济意义的抗议活动。一开始是对跨境卡车司机强制接种疫苗令的抗议，现在迅速演变成一场范围更广的运动，特鲁多迄今为止拒绝会见抗议者。“每个人都厌倦了新冠病毒，但这些抗议并不是度过难关的途径，”他周一晚上说。
 
-So we know that this is happening
-所以我们知道这正在发生
+加拿大汽车制造商协会负责人布莱恩·金斯顿（Brian Kingston）周二在电话中表示：“大桥的关闭将对加拿大经济造成灾难性影响”。汽车行业已经遇到零部件短缺的情况。
 
-It’s not a theoretical issue about all the niceties of laboratory biology and neurology of things
-这不是关于实验室生物学和神经病学所有细节的理论问题
+在疫情期间，被限制令困在家里的人们将购买力转向物质商品。所以供应链在创纪录的运输量的重压下嘎吱作响。我们的卡车司机们为了满足市场需求在超负荷的工作着。有些政治家们在议会中埋怨卡车司机却不面对正是他们的强制和限制令引发了这场席卷全球的运动。被特鲁多称为暴民的卡车司机是加拿大的草根，代表了基本的加拿大人的特性。正如一位退伍军人在视频上说的“军人在战场上可以是英雄，你们也是英雄”。
 
-That could happen
-那可能会发生
-
-It’s a real thing that’s been really observed by their testing
-这是他们的测试真正观察到的真实事物
-
-Del Matthew Bigtree (American television and film producer)
-德尔·里马修·毕吹（美国电视和电影制片人）
-
-I mean, a lot of us known Dr. Harvey Risch, because he is you know
-我的意思是，我们很多人都认识哈维·里施博士，因为他就是你知道的
-
-one of the go to’s on Fox News, but just want to show his CV
-他是经常在福克斯新闻上讨论热门话题的人之一，但只想展示他的简历
-
-I mean, this just when you look at this, folks
-我的意思是，当你看到这个的时候，伙计们
-
-this thing is 73 pages long we could spend the rest of the day showing you how much
-这东西有73页长，我们可以用剩下的时间给你看
-
-you know, Dr. Harvey Risch is achieved in his career
-你知道，哈维·里施博士在他的职业生涯中取得了成就
-
-And so when we hear the pejorative thrown at you guys
-所以当我们听到对你们的贬义的时候
-
-you know that oh, they’re just extremist or fringe doctors
-你知道哦，“他们只是一些极端分子或边缘医生”
-
-You guys are some of the most mainstream doctors in the world as we know it
-正如我们所知，你们是世界上最主流的医生
-
-So when he was saying when he’s talking about the immune system and nucleocap-sid
-所以当他谈到免疫系统时和核衣壳
-
-for layman’s, what does that mean?
-对于外行来说，这是什么意思？
-
-Richard Urso, MD
-理查德·乌索，医学博士
-
-So So what what’s being thrown at us is, again, the Superman super immunity
-那么，再次扔给我们的是什么？是超人？超级的免疫力？
-
-So if you get the virus and then you get the vaccine
-所以如果你感染了病毒，然后你接种了疫苗
-
-you’ll have super immunity
-你就会拥有超强免疫力
-
-No, you don’t, and he points that out
-不，你没有，他指出了这一点
-
-And there’s a couple of scary things
-还有一些可怕的事情
-
-Not only do you not get super immunity
-不仅没有超强免疫力
-
-but you get attack on p53 and BRCA genes
-但是你会受到p53和BRCA基因的攻击
-
-These are your mutation suppressor genes are called tumor suppressor genes
-这些是你的突变抑制基因被称为肿瘤抑制基因
-
-These have been attacked by the spike protein
-这些已被刺突蛋白攻击
-
-The paper was cited I cited it on on after Harvey finished talking
-哈维说完之后我引用了这篇论文
-
-Yeah
-是呀
-
-Richard Urso
-理查德·乌
-
-the other thing that’s happening
-正在发生的另一件事
-
-the toll-like receptor 7/8 are getting attacked
-toll-like受体 7/8 受到攻击
-
-That is important for T cell surveillance and your immune system
-这对T细胞监测和免疫系统很重要
-
-That’s not a good thing for your for the spike protein is doing that after the vac-cinations
-这对你来说不是一件好事，因为刺突蛋白在接种疫苗后会这样做
-
-So what he’s there what he’s addressing is not only his natural immunity denial ri-diculous
-因此，他在那里所讨论的不仅是他的自然免疫力被否定的荒谬问题
-but to say we have super immunity
-而且说我们有超强免疫力
-
-It’s actually in some cases the antibody production is going also in a way towards the spike
-实际上，在某些情况下，抗体的产生也在朝着刺突蛋白的方向发展
-
-rather than the nucleocapsid which is more superior immunity
-而不是核衣壳，而核衣壳的免疫力更优越
-
-Date:02/06/2022
-原视频标题: Vaccines not only hurt cancer immunity, but also form relatively inefficient immunity
-疫苗不仅会伤害癌症免疫力，还会形成相对低效的免疫力
-原视频日期：2022/02/08
-原视频链接:https://gettr.com/post/psmk0gaadf
-任务编号：KE391（3698）
-视频时间段 : 0:00-2:14
-
-英听校: 洛杉矶盘古农场 – Layka
-翻译: 洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+[Source](https://www.bnnbloomberg.ca/how-blocking-one-bridge-shut-down-a-quarter-of-canada-u-s-trade-1.1720308)
 
  
 
