--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,34 +1,21 @@
 ---
-title: 2月9日大直播后记：独裁国家政权都崇拜暴力美学
+title: 针下亡魂｜希腊 21 岁足球运动员接种疫苗后死亡
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1982031/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/1982043/)
 
-整理：清水冷香 Lucy Liu
-编辑：文泓
+**撰文/ 疫情关注组｜发布日期/ 10/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2021/10/New-Looks-In-Autumn-Style123445_2.jpg)
+**更多资讯请关注官方盖特（Please follow our Gettr：[https://gettr.com/post/pl6k0218bf](https://gettr.com/post/pl6k0218bf)）**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/15-2.png)图片来源：墨尔本雅典娜农场设计组
+隶属于伊利乌波利具乐部的希腊 21 岁足球运动员 Alexandros Lampis ，在本月初（2日）对阵 Ermionida 的比赛中，即开场14分钟时，因心脏骤停而倒在赛场上。
 
+最令人遗憾的是，由于当时体育场内并没有除颤器可用，Alexandros 足足等了 20 分钟，才等到救护车赶到。之后不久，伊利乌波利具乐部在官网宣布了Alexandros 的死讯。
 
-这次北京冬奥会的“以假为真”，历史上的苏联也一样。在1935年和1980年两届奥运会，你问当时参加的（国家），哇塞，它们都太伟大了！这种力量没人能改变，谁也干不了它（独裁国家）。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpeg)
 
-当时苏联搞过一个军事演习，叫西方-81号军事演习。当时说是20万大军拉练，人类战争史上最牛叉的、最大规模的一次军事演习。调集了苏联红军所有的军队，所有的（演习）整完以后，这场陆海空多兵种军事演习，（起初）说是20万，最后证明是60万大军。
-
-这次美国和苏联整个（模拟）较量以后，美国彻底惨败。可把欧洲吓坏了，就这种希特勒和斯大林崇拜的军事暴力美学，也是共产党崇拜的，通过这次军演达到了极致。坦克装甲部队、潜水艇、机械化部队全面参与，苏联的20万大军，瞬间就能把欧洲碾平。
-
-把欧洲吓得真的是浑身发抖啊，这可怎么战呢？欧洲根本战不了，就找美国来了。俄罗斯这个战斗民族不是吹出来的，也不是盖出来的，把欧洲绝对是吓趴下了。美国人给的答案非常简单，咱是打不过它，美国人就这么真实。
-
-所以，后来美国就有了所谓新的军事技术，太空飞机、无人机、B2等。当时出了两个将军，这个哥们是个牛叉的人，美国、苏联军队（历史）上最牛叉的设计师，还有他的博物馆。他把战争这个东西玩到了极致。他的学生是谁呀？叫列昂尼德·伊瓦绍夫，是原苏联的副总参谋长、国防部部长助理和地缘政治学院院长。
-
-这次在普京离开北京后，他公开发声要求普京辞职。他说，你以俄罗斯的政治前途和国家安全为代价，就想跟乌克兰打仗。而且他明确地说，你跟美国打没门儿，你是打不过的。他没有提及中共国。但是，私下里他说，（普京）和中共国的沟通、勾兑，玩所谓的国际三角关系，还有（普习）个人领导关系，你就连个狼狈为奸都配不上，就是一场肮脏的老鼠和狮子的游戏。（中共国的事情）让人情何以堪呐？
-
-资料来源：[2022年2月9日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+根据希腊当局的防疫规定，获得上场比赛资格的运动员必须接种 COVID-19 疫苗。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpg)
+来源｜[TheSun](https://www.thesun.co.uk/sport/17524888/alexandros-lampis-dies-21-greek-footballer-cardiac-arrest/)
 
  
 
