--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,29 +1,51 @@
 ---
-title: 伦敦法院立案调查瑞银 全球银行巨头岌岌可危
+title: 全球中共病毒病例数在过去一周内骤降了17%
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1981519/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1981536/)
 
-翻译：nstar
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-09-at-5.53.06-PM.png)图片：alamy
-瑞士金融新闻网报道2月9日报道，**银行巨头瑞银已在伦敦法院被起诉，原告郭文贵要求赔偿 5 亿美元（译者更正：根据郭文贵先生2月9日大直播信息，索赔金额远大于5亿美元，可达几百亿美元或更多）。**瑞银想取消该案件起诉程序。但现在一名法官以全球银行巨头由于此案件而岌岌可危为由批准了该起诉书**。**
+作者：纽约香草山农场 – 四季
 
-**银行巨头瑞银在伦敦被中国企业家、白手起家的亿万富翁和中共政权批评家郭文贵以 5 亿美元起诉（请见以上的译者更正）。该银行曾希望能够像在其他地方一样驳回诉讼，因为法院尚未宣布自己有能力处理该案。**
+![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
 
-**但现在一名法官周三在伦敦表示，她正在受此案，因为正如“彭博社” （该文章受到指控）报道的那样，实际损害事件也发生在伦敦。它说，瑞银的伦敦分支机构充分且显著地参与了此案。**
 
-**精美的印刷品重要吗？**
 
-这件事的起点是所谓的追加保证金通知，正如finews.ch另外报道的那样，瑞士银行没收了作为贷款抵押品的股票，并显然以低价出售。另一方面，这位中国大亨称，他与瑞银的交易不包括这样的追加保证金安排。银行和原告均未对该机构发表评论。
 
-具体来说：2015年，他以瑞银贷款收购了香港券商海通证券的大量股权。海通股票的大规模股市崩盘引发了瑞银的追加保证金通知。郭文贵称，追加保证金未明确包含在贷款协议中。瑞银在一份声明中反驳了这一说法，并希望通过一切手段为自己辩护。
 
-**新风险**
+据[布赖特巴特新闻网](https://www.breitbart.com/health/2022/02/09/coronavirus-in-retreat-global-case-counts-plunge-17-in-past-week/)2月9日报道， 世界卫生组织周二宣布，过去一周全球中共病毒病例数与过去同期相比下降了17%，其中仅美国就下降了50%，而全球死亡人数下降了7%。
 
-然而，随着伦敦的决定，全球活跃的大银行总部应该敲响其他警钟。因为随着金融机构在全球范围内的合作，在任何地方所发生的瑞银价值链组成部分都可以提起诉讼。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GE-02-640x480-1.jpg)Michael M. Santiago/Getty, Images
 
-原文链接：[https://www.finews.ch/news/banken/50026-ubs-klage-london-guo-margin-call-schadenerstatz-500-millionen](https://www.finews.ch/news/banken/50026-ubs-klage-london-guo-margin-call-schadenerstatz-500-millionen)
+世界卫生组织表示，Omicron变体的流行率在全球范围内有所增加。然而，许多早期曾报告因Omicron变体而导致病例数上升的国家现在报告说，自2022年1月初以来，新病例总数有所下降。
 
-校对发布：Shifter
+随着新的统计数字的出现，世界各地要求结束强制口罩令和强制性疫苗接种的呼声越来越高。世界各国政府也都在寻求放松限制。
+
+澳大利亚将很快向已接种疫苗的游客重新开放边境。继丹麦和挪威之后，瑞典也在取消大部分大流行病规定。在加拿大，争取摆脱所有中共病毒限制的运动已经成为全球头条新闻。
+
+就在本周，美国的加利福尼亚州、康涅狄格州、特拉华州、新泽西州和俄勒冈州的州长表示，他们将结束全州范围内的室内口罩规定，其中一些适用于学校，另一些适用于公共场所。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2月.jpg)
+
+编辑/校对/发稿：小鹿
+
+
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场**** ****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场**** ****GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场**** ****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** ****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 ****Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
+
+
+
+
 
  
 
